# launch-code

./: .gitignore  AGENTS.md  Cargo.toml  README.md
agents/: AGENTS.md  session-operations-checklist.md
docs/: installation.md  python-debug-manual.md
docs/plans/: 2026-02-14-launch-manager-mvp.md
docs/zh-cn/: README.md  command-reference.md  http-api.md  index.md  installation.md  json-error-codes.md  quick-start.md  runtime-debug-matrix.md  troubleshooting.md
scripts/: install.sh
src/: app.rs  cli.rs  config.rs  dap.rs  debug.rs  debug_backend.rs  envfile.rs  error.rs  http_api.rs  http_utils.rs  lib.rs  link_registry.rs  main.rs  model.rs  output.rs  process.rs  session_lookup.rs  state.rs
tests/: cli_alias_lcode.rs  cli_batch_control.rs  cli_cleanup.rs  cli_concurrent_start.rs  cli_config_profiles.rs  cli_daemon.rs  cli_dap.rs  cli_dap_args.rs  cli_doctor.rs  cli_go_debug_modes.rs  cli_help.rs  cli_inspect.rs  cli_json_output.rs  cli_launch_config.rs  cli_launch_envfile_python.rs  cli_launch_tasks.rs  cli_launch_variables.rs  cli_link.rs  cli_list_filters.rs  cli_list_watch.rs  cli_logs.rs  cli_managed.rs  cli_project_info.rs  cli_python_debug.rs  cli_python_debug_venv_interpreter.rs  cli_restart_force.rs  cli_session_topology.rs  cli_start_modes.rs  cli_stop_force.rs  cli_suspend_resume_group.rs  cli_trace_time.rs  cli_vscode_attach.rs  cli_workflow.rs  debug_port_resolution.rs  e2e_go_debug_cli_dap_breakpoint.rs  e2e_python_debug_cli_dap_breakpoint.rs  e2e_python_debug_http_breakpoint.rs  http_cleanup.rs  http_dap_batch.rs  http_dap_events.rs  (+15 more)
(+54 files in other folders)
