[package]
name = "launch-code"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "lcode"
path = "src/bin/lcode.rs"

[[bin]]
name = "launch-code"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
fs2 = "0.4.3"
libc = "0.2.182"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tiny_http = "0.12.0"
uuid = { version = "1.18.1", features = ["v4", "fast-rng"] }

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
tempfile = "3.23.0"
ureq = "3.1.2"
